--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Short Rest!",
-  "description": "Blah blah blah sleep sleep sleep",
+  "description": "Simple break time tracker with some tetris.",
   "version": "1.0",
   "author": "Battle-System",
   "manifest_version": 1,
